<resources xmlns:xliff="http://schemas.android.com/tools">
    <!-- App global display name-->
    <string name="app_name">Sunshine</string>

    <!-- Menu Strings -->
    <string name="action_refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Definition of settings preference array of entries and values -->
    <string-array name="pref_units_entries">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string-array name="pref_units_entries_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>
    <string name="pref_units_default_value">metric</string>

    <!-- Definition of settings preference titles -->
    <string name="pref_units_title">Weather measure unit</string>
    <string name="pref_units_dialog_title">Units</string>
    <string name="pref_location_title">Location</string>
    <string name="pref_location_dialog_title">Location</string>
    <string name="pref_location_default_value">94043</string>
    <string name="pref_units_key">pref_units</string>
    <string name="pref_location_key">pref_location</string>
    <string name="pref_notifications_key">pref_notifications</string>
    <string name="preferred_location">Location</string>
    <string name="pref_units_metric">metric</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forecast_fragment_tag">forecast_fragment_tag</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g>%%</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>

        <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="detail_activity_label">Details</string>
    <string name="settings_activity_label">Settings</string>

    <!-- Art Image Icon Descriptions -->
    <string name="art_storm_description">Storm weather Icon</string>
    <string name="art_light_rain_description">Light rain weather Icon</string>
    <string name="art_rain_description">Rain weather Icon</string>
    <string name="art_snow_description">Snow weather Icon</string>
    <string name="art_fog_description">Fog weather Icon</string>
    <string name="art_clear_description">Clear weather Icon</string>
    <string name="art_light_clouds_description">Light Clouds weather Icon</string>
    <string name="art_clouds_description">Clouds weather Icon</string>

    <string name="sync_account_type">sunshine.tgzoom.example.com</string>
    <string name="content_authority">com.example.tgzoom.sunshine</string>

    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

</resources>
