<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_title"
        android:dialogTitle="@string/pref_units_dialog_title"
        android:entries="@array/pref_units_entries"
        android:entryValues="@array/pref_units_entries_values"
        android:defaultValue="@string/pref_units_default_value"
        />
    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_title"
        android:dialogTitle="@string/pref_location_dialog_title"
        android:defaultValue="@string/pref_location_default_value"
        />

    <CheckBoxPreference
        android:key="@string/pref_enable_notifications_key"
        android:title="@string/pref_enable_notifications_label"
        android:defaultValue="@string/pref_enable_notifications_default"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        />
</PreferenceScreen>